--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4423,7 +4423,7 @@
 		-ms-justify-content: center;
 		justify-content: center;
 		background-attachment: fixed;
-		background-image: url("../../images/mContainBackground.jpg");
+		background-image: url("../../images/background.jpg");
 		background-position: bottom left;
 		background-size: cover;
 		border-top: solid 10px #257f93;
