--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -40,7 +40,7 @@
 		highlight:			accent1,
 
 		accent1: (
-			bg:				#5ac3d6,
+			bg:				#606060,
 			fg:				rgba(255,255,255,0.75),
 			fg-bold:		#ffffff,
 			fg-light:		rgba(255,255,255,0.5),
