--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -40,7 +40,7 @@
 		highlight:			accent1,
 
 		accent1: (
-			bg:				#606060,
+			bg:				#4f2593,
 			fg:				rgba(255,255,255,0.75),
 			fg-bold:		#ffffff,
 			fg-light:		rgba(255,255,255,0.5),
@@ -52,7 +52,7 @@
 		),
 
 		accent2: (
-			bg:				#5a5a5a,
+			bg:				#937b25,
 			fg:				rgba(255,255,255,0.75),
 			fg-bold:		#ffffff,
 			fg-light:		rgba(255,255,255,0.5),
